chore: setup examples for combiners
